syntax = "proto3";

package silenteight.datasource.api.country.v1;

import "google/api/annotations.proto";

option java_package = "com.silenteight.datasource.api.country.v1";
option java_outer_classname = "CountryProto";
option java_multiple_files = true;

service CountryInputService {
  rpc BatchGetMatchCountryInputs (BatchGetMatchCountryInputsRequest) returns (stream BatchGetMatchCountryInputsResponse) {
    option (google.api.http) = {
      post: "/agent-inputs/country/versions/v1/matches:batchGet"
      body: "*"
    };
  }
}

message BatchGetMatchCountryInputsRequest {
  // The list of matches data is requested for, in form of `alerts/<Alert ID>/matches/<Match ID>`.
  repeated string matches = 1;
  // The list of features the input data for each match is requested, in form of `features/<Feature ID>`.
  repeated string features = 2;
}

message BatchGetMatchCountryInputsResponse {
  repeated CountryInput country_matches = 1;
}

message CountryInput {
  string match = 1;
  repeated CountryFeatureInput country_feature_inputs = 2;
}

message CountryFeatureInput {
  string feature = 1;
  repeated string alerted_party_countries = 2;
  repeated string watchlist_countries = 3;
}
